<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/bk_primary" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btn_action_back"
            android:onClick="onClickBackButton"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/common_bk_action_button"
            android:contentDescription="@string/common_navigation_back"
            android:src="@drawable/common_action_back_light" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/common_divider"
            android:src="@drawable/common_header_divider" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/settings_title"
            android:textColor="@color/tx_white"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

</RelativeLayout>