<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/bk_primary" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:contentDescription="@string/common_ic_home"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:src="@drawable/course_student_read_light" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/common_divider"
            android:src="@drawable/common_header_divider" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/common_app_name"
            android:textColor="@color/tx_white"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <!--
        <ImageButton
            android:id="@+id/btn_action_refresh"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:background="@drawable/common_bk_action_button"
            android:contentDescription="@string/common_action_refresh"
            android:onClick="onClickRefreshButton"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/common_action_refresh_light" />
        -->
        <ImageButton
            android:id="@+id/btn_action_settings"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/common_bk_action_button"
            android:contentDescription="@string/common_action_settings"
            android:onClick="onClickSettingsButton"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/common_action_settings_light" />
    </LinearLayout>

</RelativeLayout>