<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:background="@color/bk_primary_light"
        android:text="@string/course_detail_basic_info"
        android:textSize="16sp"
        android:textColor="@color/tx_secondary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="24dp"
            android:text="@string/course_detail_course_name"
            android:textSize="14sp"
            android:textColor="@color/tx_primary"/>
        <TextView
            android:id="@+id/tv_course_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="24dp"
            android:textSize="14sp"
            android:textColor="@color/tx_primary"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="24dp"
            android:text="@string/course_detail_teachers"
            android:textSize="14sp"
            android:textColor="@color/tx_primary"/>
        <TextView
            android:id="@+id/tv_teachers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="24dp"
            android:textSize="14sp"
            android:textColor="@color/tx_primary"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="24dp"
            android:text="@string/course_detail_tags"
            android:textSize="14sp"
            android:textColor="@color/tx_primary"/>
        <TextView
            android:id="@+id/tv_course_tags"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="24dp"
            android:textSize="14sp"
            android:textColor="@color/tx_primary"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="24dp"
            android:text="@string/course_detail_characteristic"
            android:textSize="14sp"
            android:textColor="@color/tx_primary"/>
        <TextView
            android:id="@+id/tv_characteristic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="24dp"
            android:textSize="14sp"
            android:textColor="@color/tx_primary"/>
    </RelativeLayout>

</LinearLayout>